# guardian-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  diesel.toml  key.pem
.circle-ci/: config.yaml
.github/workflows/: rust-ci.yml
actix-guardian-identity/src/: cookie.rs  identity.rs  middleware.rs
backend/: .env  Cargo.toml  README.md  build.rs  cert.pem
backend/config/: config.yaml
backend/migrations/2020-10-29-225227_create_accounts/: down.sql  up.sql
backend/migrations/2020-10-29-235548_create_user_profiles/: down.sql  up.sql
backend/migrations/2020-10-29-235600_create_two_factor_phone_device/: down.sql  up.sql
backend/migrations/2020-10-29-235650_create_refresh_token/: down.sql  up.sql
backend/migrations/2020-10-29-235700_create_account_activity/: down.sql  up.sql
backend/migrations/2020-10-29-235750_create_oath_accounts/: down.sql  up.sql
backend/src/: config.rs  events.rs  main.rs  routes.rs  service_proto.proto
backend/src/api/: mod.rs
backend/src/api/graphql/: graphql_module.rs  handlers.rs  mod.rs
backend/src/api/graphql/schema/: account_mutation.rs  context.rs  mod.rs  mutation.rs  query.rs  root.rs  session_mutation.rs  subscription.rs
backend/src/api/grpc/account/: account_controller.rs  account_module.rs  mod.rs
backend/src/api/rest/: mod.rs
backend/src/api/rest/account/: account_controller.rs  account_module.rs  mod.rs  session_controller.rs
backend/src/api/rest/health/: health_controller.rs
backend/src/api/services/: account_service.rs  mod.rs  session_service.rs
backend/src/common/: errors.rs  helpers.rs  logger.rs  mod.rs  validate.rs
backend/src/common/auth/: account.rs  extractors.rs  middleware.rs  mod.rs  utils.rs
backend/src/common/cache/: redis.rs
backend/src/common/tests/: helpers.rs
backend/src/common/utils/: cookie_utils.rs  logger_utils.rs  serde_utils.rs  validators.rs  ver_code_gen.rs
backend/src/data/: connect.rs  mod.rs
backend/src/data/dtos/: account_dto.rs  auth_dto.rs
backend/src/data/models/: mod.rs  onetime_code_model.rs
backend/src/data/stores/: account_store.rs  base_store_trait.rs  mod.rs
backend/src/data/stores/mongo/: account_store.rs  index_actor.rs  mod.rs  mongo_index_builder.rs
backend/src/data/stores/postgres/: account_store.rs
backend/src/data/stores/sqlite3/: account_store.rs
backend/src/database/: connect.rs  mod.rs
backend/src/database/models/: account.rs  accounts_model.rs  health_model.rs  mod.rs
backend/src/database/stores/: account_store.rs  base_store_trait.rs  mod.rs
backend/src/database/stores/cockroach/: account_store.rs
backend/src/database/stores/mongo/: account_store.rs  index_actor.rs  indexers.rs  mod.rs  mongo_index_builder.rs
backend/src/database/stores/postgres/: account_store.rs
backend/src/database/stores/redis/: account_store.rs  mod.rs
backend/src/database/stores/sqlite3/: account_store.rs
backend/src/dtos/: account_dto.rs  auth_dto.rs  mod.rs
backend/src/features/: mod.rs
backend/src/features/appstate/: state.rs
backend/src/features/middleware/: auth.rs
backend/src/features/notification/: email_client.rs
backend/src/integrations/email/: email_integration.rs  mod.rs  sendgrid_integration.rs
backend/src/proto/: mod.rs
backend/src/server/: actix_server.rs  mod.rs  task_server.rs
backend/src/services/: account_services.rs  auth_services.rs  mod.rs
backend/src/tasks/: email.rs  mod.rs
backend/src/tests/: helpers.rs
backend/src/utils/: cookie_utils.rs  logger_utils.rs  mod.rs
backend/static/: index.html
backend/static-secure/: index.html
backend/template/: form.json
docs/: rest_api.md
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: lib.rs  routes.rs
frontend/src/components/: layout.rs
frontend/src/pages/: home_page.rs  login_page.rs  mod.rs  not_found_page.rs  register_page.rs
juniper_actix/: Cargo.toml
juniper_actix/src/: lib.rs
