[package]
name = "juniper_actix"
version = "0.2.4"
authors = ["Rex Isaac Raphael <rex.raphael@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
subscriptions = ["juniper_graphql_ws"]

[dependencies]
actix = "0.11.1"
actix-web = "=4.0.0-beta.5"
actix-web-actors = "4.0.0-beta.4"

juniper = { version = "0.15.4", default-features = false }
juniper_graphql_ws = { version = "0.2.4",  optional = true }

anyhow = "1.0"
futures = "0.3.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0"
tokio = { version = "0.2", features = ["time"] }

[dev-dependencies]
actix-rt = "1.1"
actix-cors = "0.5"
actix-identity = "0.3"

juniper = { version = "0.15.4", features = ["expose-test-schema"] }

bytes = "0.6"
env_logger = "0.8"
log = "0.4"